# AI-projects

./: README.md
advanced_rag_agent/: .env  README.md  agent.py  app.py  requirements.txt
agentic_travel_planner/: README.md  requirements.txt  travel_crew.py
ai_doctor_kiosk/: README.md  app.py  medical_crew.py  requirements.txt
ai_product_builder/: README.md  app.py  product_crew.py
ai_travel_trip_planner/: README.md  itinerary_writer.py  main.py  models_config.py  places.py  prompt.py  requirements.txt  streamlit_app.py  travel_crew.py  workflow.py
ai_wealth_manager/: README.md  app.py  monte_carlo.py  requirements.txt  wealth_crew.py
bert_omniverse/: README.md  app.py
journezy-trip-planner-main/: QUICKSTART.md  README_STREAMLIT.md  city_database.py  grounding_service.py  requirements.txt  requirements_streamlit.txt  streamlit_app.py  workflow.py
journezy-trip-planner-main/frontend/: README.md  package.json  tailwind.config.ts
journezy-trip-planner-main/static/: login.html
journezy-trip-planner-main/templates/: index.html
journezy-trip-planner-main/tools/: flights.py
new.excalidraw/: new.excalidraw
pdff_coinverto_project/: README.md  pyproject.toml  verify_library.py
pdff_coinverto_project/src/pdff_coinverto/: __init__.py  core.py  server.py
pdff_coinverto_project/test_files/: test.txt
stock_analysis_app/: README.md  advanced_crew.py  agentic_analysis.py  backtester.py  llm_analyst.py  main.py  ml_forecasting.py  portfolio_optimizer.py  quick_scan.py  requirements.txt  sentiment_scraper.py  test_app.py  utils.py
(+6 files in other folders)
